--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
       "start": "node dataprovider.js"
     },
     "dependencies": {
-      "express": "^4.17.1"
+      "express": "^4.17.1",
+      "cors": "^2.8.5"
     },
     "devDependencies": {
     },
